kuberentes/kubernetes-documents/Mesh Service/App Mesh/v3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gmst
  labels:
    mesh: "gmst-mesh"
    gateway: "gmst-ingress-gw"
    appmesh.k8s.aws/sidecarInjectorWebhook: "enabled"
