kuberentes/kubernetes-documents/Mesh Service/App Mesh/v3/workload.yml
apiVersion: v1
kind: Service
metadata:
  name: gmst-svc
  namespace: gmst
  labels:
    app: gmst-frontend
spec:
  selector:
    app: gmst
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmst-deploy
  namespace: gmst
  labels:
    app: gmst-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gmst-frontend
  template:
    metadata:
      labels:
        app: gmst-frontend
        version: "v1.0"
    spec:
      serviceAccountName: skills-sa
      containers:
      - name: httpcodegen
        image: ghcr.io/dispiny/http-code-gen:latest
        ports:
          - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
