kuberentes/kubernetes-documents/Mesh Service/App Mesh/v3/virtual-service.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: gmst-frontend-virtual-service
  namespace: gmst
spec:
  awsName: gmst-frontend.skill53.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: gmst-app-router
